@@ -40,6 +40,11 @@ public:
    */
   virtual void SetFilename (std::string filename) = 0;
   /**
+   * Set if to save deprecated attributes
+   * \param saveDeprecated the deprecated attributes save policy
+   */
+  void SetSaveDeprecated (bool saveDeprecated);
+  /**
    * Load or save the default values
    */
   virtual void Default (void) = 0;
@@ -51,6 +56,9 @@ public:
    * Load or save the attributes values
    */
   virtual void Attributes (void) = 0;
+
+protected:
+  bool m_saveDeprecated; ///< save deprecated attributes
 };
 
 /**
